--- a/src/station1.html
+++ b/src/station1.html
@@ -7,5 +7,11 @@
 <title>Station 1</title>
 </head>
 <body>
+    <div>
+        <img src="./assets/image/railway-thumbnail.png" alt="">
+        <p>Tech Trainの<br>使い方</p>
+        <span>テスト</span>
+        <span>テスト</span>
+    </div>
 </body>
 </html>
