--- a/src/station1.html
+++ b/src/station1.html
@@ -9,7 +9,7 @@
 <body>
     <div>
         <img src="./assets/image/railway-thumbnail.png" alt="">
-        <p>Tech Trainの<br>使い方</p>
+        <p>Tech Trainの<br>使い方テスト</p>
         <span>テスト</span>
         <span>テスト</span>
     </div>
